--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -18,4 +19,4 @@
     "@vitejs/plugin-react": "^4.0.3",
     "vite": "^4.4.5"
   }
-} 
+}
